[gd_scene load_steps=6 format=1]

[ext_resource path="res://hud/weapon_selection_box/weapon_selection_box.gd" type="Script" id=1]
[ext_resource path="res://hud/weapon_selection_box/assets/weapon_selection_box.png" type="Texture" id=2]
[ext_resource path="res://hud/weapon_selection_box/assets/weapon_selection_dot.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/morris_roman/MorrisRomanBlack.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]

font/size = 64
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[node name="weapon_selection_box" type="Node2D"]

script/script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
centered = false

[node name="center_container" type="CenterContainer" parent="."]

editor/display_folded = true
rect/min_size = Vector2( 187, 192 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 187.0
margin/bottom = 192.0
use_top_left = false

[node name="container_for_sprite" type="Container" parent="center_container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 93.0
margin/top = 96.0
margin/right = 93.0
margin/bottom = 96.0

[node name="current_weapon" type="Sprite" parent="center_container/container_for_sprite"]

[node name="weapon_dot_1" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 35.9027, 207.196 )
texture = ExtResource( 3 )
modulate = Color( 1, 1, 0, 1 )

[node name="weapon_dot_2" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 95.9027, 207.196 )
texture = ExtResource( 3 )

[node name="weapon_dot_3" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 155.903, 207.196 )
texture = ExtResource( 3 )

[node name="ammo" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 190.0
margin/top = 127.0
margin/right = 268.0
margin/bottom = 183.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


